@startuml
'https://plantuml.com/class-diagram
title Diagram Class

class Figure{
name:string
content:string
createdAt:dateTime
updatedAt:dateTime
List()
show()
addFigure()
editFigure()
deletFigure()


}
class Comment{
content:string
createdAt:dateTime
editComment()
deleteComment()
}
class Image{
name:string
editImg()
deleteImg()

}
class User{
mail:string
role:array
password:string
token:string
isVerified:bool
userName:string

}

class Video{
link:string
editVideo()
deleteVideo()
}

class Categories{
name
}

Figure "1" -- "1..*" Image : contain
Figure "1." -- "*" Comment :contain
Figure "1" -- "*" Video :contain
Figure "*" -- "1" Categories :contain
User "1" - "*" Comment :contain




@enduml